Version 0.1.11:
	New features:
	- Text lines and edit windows now have options for showing tabs.

	Bug fixes:
	- Tabs are now handled better when using line wrapping.

Version 0.1.10:
	Bug fixes:
	- Fix double free in find operation.

Version 0.1.9:
	New features:
	- Follow libt3key 0.2.0 API change.

Version 0.1.8:
	Bug fixes:
	- Show the menu bar when in hidden mode and a menu is activated.
	- Added check for required XCB constants, to prevent build failures.

Version 0.1.7:
	New features:
	- Allow finalizing of the library, to allow release of all memory for
	  debugging purposes.
	- Use dlopen/dlsym/dlclose directly if available, instead of using libltdl.
	- The text_window_t widget now also supports mouse actions.
	- Use XCB instead of Xlib if available.
	- Change many classes to use the private implementation idiom, to achieve a
	  more stable ABI.

	Bug fixes:
	- Replace using regular expressions and \1 .. \9 references caused a buffer
	  overrun.
	- Unindent selection would cause a crash if the selection started before
	  the whitespace to be removed.
	- Unindent selection would move the cursor to the last line to be
	  unindented.
	- Hickups in the X11 integration module have been solved.

Version 0.1.6:
	New features:
	- Support for the XTerm mouse protocol.
	- Integration with the X11 clipboard and primary selection.

	Miscelaneous changes:
	- Use libunistring instead of libt3unicode.
	- API changes for text_buffer_t.
	- Labels and hotkeys for find dialog changed.

	Bug fixes:
	- Scrollbar now only shows the slider at the end position if the end of the
	  content is in range.

Version 0.1.5:
	New features:
	- Allow grouping of several undo items in text_buffer_t.
	- "Replace in selection" now working.
	- Autocompletion support in edit_window_t.

	Bug fixes:
	- "Replace all" now stops even if the search string occurs in the
	  replacement string.
	- Fix the default colorscheme such that text remains readable when the